# Kanban

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
app/: dependencies.py  main.py
backend/: .env.example  create_test_table.sql  dev-requirements.txt  nixpacks.toml  pyproject.toml  requirements.txt
backend/app/: dependencies.py  main.py
backend/app/core/: config.py  database.py
backend/app/crud/: projects.py  subtasks.py  tasks.py
backend/app/models/: __init__.py  document.py  epic.py  meeting_reservation.py  project.py  project_member.py  subtask.py  task.py  task_comment.py  task_tag.py  user.py
backend/app/routers/: auth.py  documents.py  epics.py  meeting_rooms.py  project_members.py  projects.py  rooms.py  subtasks.py  tasks.py
backend/app/schemas/: document.py  epic.py  task.py  user.py
backend/app/services/: google_calendar.py
backend/kanban/: config.py  models.py
backend/kanban/cli/: main.py
backend/kanban/cli/commands/: __init__.py  auth.py  subtasks.py  sync.py  tasks.py
backend/tests/api/: conftest.py  test_projects.py  test_tasks.py  test_teams.py
backend/tests/cli/: test_cli_auth.py  test_cli_epics.py  test_cli_rooms.py  test_cli_subtasks.py  test_cli_team.py  test_entrypoint_help.py
backend/tests/e2e/: test_e2e_entrypoint.py  test_e2e_kanban.py  test_e2e_notify.py  test_e2e_projects.py  test_e2e_wbs.py
docs/: CLI.md  DATABASE.md  PRD.md  TSD.md
frontend/: .env.example  .gitignore  BACKEND_INTEGRATION.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  railway.json
kanban/: db.py  (+1 more)
(+66 files in other folders)
