[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kanban"
version = "0.0.0"
description = "Kanban CLI (minimal scaffold)"
readme = ""
requires-python = ">=3.11"
dependencies = [
    "typer>=0.7.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["kanban*"]

[project.scripts]
kanban = "kanban.cli.main:main"
